# Projet-Commande-Gestuelle-Mobile

./: .gitignore  README.md
application/: Project.pro  application.pro  main.cpp  main.qml  qml.qrc  target_wrapper.bat  test.pro
application/src/application/: actionprocessor.cpp  actionprocessor.h  executeactioncommand.cpp  executeactioncommand.h  photoprocessor.cpp  photoprocessor.h  serviceidentify.cpp  serviceidentify.h
application/src/learning/: classifier.cpp  classifier.h  imageadapter.cpp  imageadapter.h  preprocessingdecorator.cpp  preprocessingdecorator.h
application/src/model/: databasemanager.cpp
application/src/presentation/: cameracontroller.cpp  cameracontroller.h  mainwindow.cpp
application/test/: test.cpp
application/test/end_to_end/: tst_cameracontroller.cpp  tst_cameracontroller.h
application/test/integration/: tst_actionprocessor.cpp  tst_actionprocessor.h  tst_cameracontroller.cpp
application/test/unit/: tst_actionprocessor.cpp  tst_actionprocessor.h  tst_cameracontroller.cpp  tst_cameracontroller.h  tst_classifier.cpp  tst_classifier.h  tst_executeactioncommand.cpp  tst_executeactioncommand.h  tst_imageadapter.cpp  tst_imageadapter.h  tst_photoprocessor.cpp  tst_photoprocessor.h  tst_preprocessingdecorator.cpp  tst_preprocessingdecorator.h  (+2 more)
learning/: CMakeLists.txt  cnn_backward.cpp  cnn_backward.h  cnn_forward.cpp  cnn_forward.h  cnn_model.cpp  cnn_model.h  cnn_structures.h  convnet.cpp  convnet.h  custom_conv.cpp  custom_conv.h  learning.cpp  src.sln
learning/src/: Project_Learning.vcxproj  Source.cpp  packages.config
